Remove unused code

--- a/layouts/480x320.yaml
+++ b/layouts/480x320.yaml
@@ -20,8 +20,8 @@ font: !include
 
   - &container_styles
     <<: !include styles/container_styles.yaml
-    pad_top: 0px #6px
-    pad_bottom: 0px #6px
+    pad_top: 0px
+    pad_bottom: 0px
     pad_left: 6px
     pad_right: 6px
 
