--- a/layouts/fonts/fonts.yaml
+++ b/layouts/fonts/fonts.yaml
@@ -21,19 +21,22 @@
     bpp: 4
 
   - id: mdi_sm
-    file: 'fonts/materialdesignicons-webfont.ttf'
+    # file: 'fonts/materialdesignicons-webfont.ttf'
+    file: https://github.com/Pictogrammers/pictogrammers.github.io/raw/refs/heads/main/@mdi/font/7.4.47/fonts/materialdesignicons-webfont.ttf
     size: ${icons_sm}
     bpp: 4
     glyphs: !include glyphs.yaml
 
   - id: mdi_md
-    file: 'fonts/materialdesignicons-webfont.ttf'
+    # file: 'fonts/materialdesignicons-webfont.ttf'
+    file: https://github.com/Pictogrammers/pictogrammers.github.io/raw/refs/heads/main/@mdi/font/7.4.47/fonts/materialdesignicons-webfont.ttf
     size: ${icons_md}
     bpp: 4
     glyphs: !include glyphs.yaml
 
   - id: mdi_lg
-    file: 'fonts/materialdesignicons-webfont.ttf'
+    # file: 'fonts/materialdesignicons-webfont.ttf'
+    file: https://github.com/Pictogrammers/pictogrammers.github.io/raw/refs/heads/main/@mdi/font/7.4.47/fonts/materialdesignicons-webfont.ttf
     size: ${icons_lg}
     bpp: 4
     glyphs: !include glyphs.yaml
