--- a/sunton-50-test.yaml
+++ b/sunton-50-test.yaml
@@ -1,7 +1,7 @@
 substitutions:
   device_name: sunton-50-test
   friendly_name: Sunton 5.0" Test
-  home_page: lighting
+  home_page: lighting_1
 
 packages:
   common: !include common.yaml
