Revert "Remove unneeded script"
This reverts commit a8dda59b1d10b8e13308d4ee916619bc0e13f97a.

--- a/layouts/320x240.yaml
+++ b/layouts/320x240.yaml
@@ -48,6 +48,11 @@ font: !include
     bar_height: 22px
     bar_padding: 5
 
+script:
+  - id: go_home
+    then:
+    - lvgl.page.show: ${home_page}
+
 lvgl:
   default_font: roboto_md
   disp_bg_color: 0x42495A # ?
@@ -59,7 +64,7 @@ lvgl:
       skip: true
       on_load:
         then:
-          lvgl.page.show: ${home_page}
+          script.execute: go_home
 
     - id: bedroom
       <<: *page_styles
