Update Sunton 4.3 & 5.0 to work with upcoming ESPHome changes

--- a/devices/ESP32-8048S043.yaml
+++ b/devices/ESP32-8048S043.yaml
@@ -52,7 +52,7 @@ display:
     dimensions:
       width: 800
       height: 480
-    rotation: 270
+    rotation: 90
     color_order: RGB
     de_pin: 40
     hsync_pin: 39
@@ -78,6 +78,9 @@ touchscreen:
   platform: gt911
   address: 0x5D
   update_interval: 16ms
+  transform:
+    swap_xy: true
+    mirror_x: true
   # reset_pin: 38
   # on_touch:
   #   - lambda: |-
