--- a/devices/ESP32-8048S050.yaml
+++ b/devices/ESP32-8048S050.yaml
@@ -52,7 +52,7 @@ display:
     dimensions:
       width: 800
       height: 480
-    rotation: 270
+    rotation: 90
     color_order: RGB
     de_pin: 40
     hsync_pin: 39
@@ -74,9 +74,13 @@ display:
     auto_clear_enabled: false
 
 touchscreen:
+  id: main_touchscreen
   platform: gt911
   address: 0x5D
   update_interval: 16ms
+  transform:
+    mirror_x: true
+    swap_xy: true
   # reset_pin: 38
   # on_touch:
   #   - lambda: |-
