--- a/layouts/widgets/navigation/widget.yaml
+++ b/layouts/widgets/navigation/widget.yaml
@@ -1,3 +1,7 @@
+# required vars:
+# - height
+# - padding
+
 # widgets:
   - obj: # title bar
       id: titlebar
@@ -6,7 +10,6 @@
       border_width: 0
       radius: 0
       pad_all: 0
-      # bg_color: 0x5A6173
       align: TOP_MID
       widgets:
         - label: # title
@@ -26,7 +29,6 @@
       border_width: 0
       radius: 0
       pad_all: 0
-      bg_color: 0x42495A
       align: BOTTOM_MID
       layout:
         type: FLEX
