--- a/devices/DIS05035H.yaml
+++ b/devices/DIS05035H.yaml
@@ -4,15 +4,15 @@ esp32:
     type: arduino
 
 i2c:
-  sda: 22
-  scl: 21
+  - sda: 22
+    scl: 21
 
 spi:
-  id: tft
-  clk_pin: 14
-  mosi_pin: 13
-  miso_pin: 33 #12 on v2.0
-  interface: hardware
+  - id: tft
+    clk_pin: 14
+    mosi_pin: 13
+    miso_pin: 33 #12 on v2.0
+    interface: hardware
 
 output:
   - id: gpio_backlight_pwm
@@ -49,27 +49,29 @@ display:
     auto_clear_enabled: false
 
 touchscreen:
-  id: main_touchscreen
-  platform: xpt2046
-  cs_pin:
-    number: 12 #33 on v2.0
-    ignore_strapping_warning: true
-  interrupt_pin: 36
-  update_interval: 50ms
-  threshold: 400
-  calibration:
-    x_min: 280
-    x_max: 3860
-    y_min: 3860
-    y_max: 340
-  # on_touch:
-  #   - lambda: |-
-  #         ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
-  #           touch.x,
-  #           touch.y,
-  #           touch.x_raw,
-  #           touch.y_raw
-  #         );
+  - id: main_touchscreen
+    platform: xpt2046
+    cs_pin:
+      number: 12 #33 on v2.0
+      ignore_strapping_warning: true
+    interrupt_pin: 36
+    update_interval: 50ms
+    threshold: 400
+    calibration:
+      x_min: 280
+      x_max: 3860
+      y_min: 340
+      y_max: 3860
+    transform:
+      mirror_y: true
+    # on_touch:
+    #   - lambda: |-
+    #         ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
+    #           touch.x,
+    #           touch.y,
+    #           touch.x_raw,
+    #           touch.y_raw
+    #         );
 
 lvgl:
   buffer_size: 25%
