--- a/layouts/480x320.yaml
+++ b/layouts/480x320.yaml
@@ -393,6 +393,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_1
+                      name: 1 - Fred
                       <<: *printer_widget_vars
 
               - obj: # printer 2
@@ -400,6 +401,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_2
+                      name: 2 - Wilma
                       <<: *printer_widget_vars
 
               - obj: # printer 3
@@ -407,6 +409,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_3
+                      name: 3 - Barney
                       <<: *printer_widget_vars
 
               - obj: # printer 4
@@ -414,6 +417,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_4
+                      name: 4 - Betty
                       <<: *printer_widget_vars
 
               - obj: # printer 5
@@ -421,6 +425,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_5
+                      name: 4 - Dinno
                       <<: *printer_widget_vars
 
 packages:
