--- a/layouts/800x480.yaml
+++ b/layouts/800x480.yaml
@@ -380,6 +380,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_1
+                      name: 1 - Fred
                       <<: *printer_widget_vars
 
               - obj: # printer 2
@@ -387,6 +388,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_2
+                      name: 2 - Wilma
                       <<: *printer_widget_vars
 
               - obj: # printer 3
@@ -394,6 +396,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_3
+                      name: 3 - Barney
                       <<: *printer_widget_vars
 
               - obj: # printer 4
@@ -401,6 +404,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_4
+                      name: 4 - Betty
                       <<: *printer_widget_vars
 
               - obj: # printer 5
@@ -408,6 +412,7 @@ lvgl:
                     file: widgets/printers/widget.yaml
                     vars:
                       uid: printer_5
+                      name: 4 - Dinno
                       <<: *printer_widget_vars
 
 packages:
